--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,18 @@
 {
   "name": "backend",
   "version": "0.0.1",
+  "scripts": {
+	"start": "nodemon --ignore data/ ./GraphQL/startgraph.js"
+  },
   "dependencies": {
+    "apollo-server-express": "^2.9.4",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "graphql": "^14.5.8",
+    "graphql-tools": "^4.0.5",
     "mysql": "^2.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.3"
   }
 }
