--- a/backend/package.json
+++ b/backend/package.json
@@ -2,15 +2,19 @@
   "name": "backend",
   "version": "0.0.1",
   "scripts": {
-	"start": "nodemon --ignore data/ ./GraphQL/startgraph.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
     "apollo-server-express": "^2.9.4",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "express": "^4.17.1",
     "graphql": "^14.5.8",
     "graphql-tools": "^4.0.5",
-    "mysql": "^2.17.1"
+    "knex": "^0.19.4",
+    "mysql": "^2.17.1",
+    "pg": "^7.12.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
