--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.9.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
     "styled-components": "^4.4.0"
   },
